--- a/src/ring-styles/submenu.css
+++ b/src/ring-styles/submenu.css
@@ -16,8 +16,8 @@
 
 .sub-ring-node {
   position: absolute;
-  width: 46px;
-  height: 46px;
+  width: 42px;
+  height: 42px;
   transform: translate(-50%, -50%) scale(0);
   display: flex;
   align-items: center;
@@ -28,8 +28,8 @@
 }
 
 .sub-ring-node-inner {
-  width: 46px;
-  height: 46px;
+  width: 42px;
+  height: 42px;
   border-radius: 50%;
   background: var(--ring-node-bg);
   border: none;
